Changed class name icon to element-icon to fix dark mode select from rendering incorrectly

--- a/docs/src/styles/custom.css
+++ b/docs/src/styles/custom.css
@@ -3,7 +3,7 @@
   font-weight: bold;
 }
 
-.icon {
+.element-icon {
   height: 28px !important;
   width: 28px !important;
 }
